--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-mvc",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "express light-weight mvc",
   "main": "server.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
     "express": "^4.16.2",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
